# composable-data-stack

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.ps1  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  THANK_YOU_OPEN_SOURCE.md  pyproject.toml  renovate.json  superset.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-smoke-test.yml  release.yml
cli/: image_updates.py  main.py  planner.py  renderer.py  secrets.py  security.py  validator.py
dagster/: Dockerfile  requirements.txt
docs/: architecture.md  from-docker-to-cds-profile.md  good-first-issues.md  installers.md  maintainer-merge-policy.md  modules.md  os-compatibility.md  packaging.md  roadmap.md  support-policy.md
docs/mvp-test/: checklist-signoff.md  mvp-test-plan.md
images/dagster/: Dockerfile  Dockerfile-user-code  dagster.yaml  dagster.yaml.j2  entrypoint.sh  generate_config.py  requirements-postgres.txt  requirements-user-code.txt  requirements.txt  workspace.yaml
schemas/: contract.schema.json
security/: rule-schema.json  rule-set.json
tests/: test_cds_workflow.py  test_compose_runtime_smoke.py  test_dagster_config_generation.py  test_image_updates.py  test_main.py  test_module_isolation.py  test_modules_no_committed_secrets.py  test_planner.py  test_python_version_alignment.py  test_render_example_profile.py  test_renderer.py  test_smoke_example_profile.py  test_superset_hardening.py
(+26 files in other folders)
