# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composable-data-stack"
version = "0.1.1"
description = "CLI for validating and composing composable data stack profiles"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.22.0",
  "jinja2>=3.0",

]

[project.optional-dependencies]
completion = [
  "argcomplete>=3.0.0",
]
dev = [
  "coverage>=7.6",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[project.scripts]
cds = "cli.main:main"

[tool.setuptools]
packages = ["cli"]

[tool.coverage.run]
source = ["cli"]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = false
